# pulsar2

./: .gitignore  CMakeLists.txt  collision_mesh_downloader.py
.cache/clangd/index/: Action.h.2EC596DDA83E6143.idx  ActionParser.h.0ADE1717D11E39B8.idx  AdvancedObs.cpp.E40ABF5BECA28544.idx  AdvancedObs.h.AC5C917B504BF257.idx  Arena.cpp.47290526A7DBC400.idx  Arena.h.857C826ADB492785.idx  ArenaConfig.cpp.945A57DCEB02DE0D.idx  ArenaConfig.h.91E4A8F05A8ED7C1.idx  AvgTracker.h.862D6592ABDF0385.idx  Ball.cpp.E722308F013E90E5.idx  Ball.h.34921584F6C35F48.idx  BallHitInfo.cpp.F22A663753B9C4F1.idx  BallHitInfo.h.83775A33C36CC298.idx  BallPredTracker.cpp.3A37965FB875160A.idx  BallPredTracker.h.51015E035948289A.idx  BaseInc.h.F393D712096DE6F2.idx  BoostPad.cpp.5166CD5AB9F2F3C9.idx  BoostPad.h.E9128AEBDC7214C8.idx  BoostPadGrid.cpp.779B837762001A5B.idx  BoostPadGrid.h.CEED7F619EB618BC.idx  BulletLink.cpp.26FAD7069325CC56.idx  BulletLink.h.5FFEA4F3E171D0FB.idx  Car.cpp.56F72556B8059F42.idx  Car.h.6384A7D5FECE35C2.idx  CarConfig.cpp.38862311EE6207B4.idx  CarConfig.h.66DFA8731F07DF49.idx  CarControls.h.85A7687CEFD1E650.idx  CollisionMasks.h.286E40C49952194E.idx  CollisionMeshFile.cpp.57A5DF7E19DFE9CA.idx  CollisionMeshFile.h.30EF2EA5333BEA88.idx  CommonRewards.h.C691D25D68787343.idx  CommonValues.h.4BF27063819AE74B.idx  DataStreamIn.h.52F6FA43745286F9.idx  DataStreamOut.h.628C34F5116B0B9D.idx  DefaultAction.cpp.328696616CF7F21E.idx  DefaultAction.h.B0DFBFA53A6E9157.idx  DefaultObs.cpp.4724D37862CD0D13.idx  DefaultObs.h.7AB085BAC9DC641F.idx  DefaultObsPadded.cpp.00328D8B81A40269.idx  DefaultObsPadded.h.4E7461F875D777C3.idx  (+348 more)
.serena/: project.yml
GigaLearnCPP/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/RocketSim/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/src/RLGymCPP/: CommonValues.h  Framework.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/ActionParsers/: ActionParser.h  DefaultAction.cpp  DefaultAction.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/BasicTypes/: Lists.h  Quat.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/EnvSet/: EnvSet.cpp  EnvSet.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/Gamestates/: GameState.cpp  GameState.h  StateUtil.cpp  StateUtil.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/ObsBuilders/: AdvancedObs.cpp  AdvancedObs.h  DefaultObs.cpp  DefaultObsPadded.cpp  ObsBuilder.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/Rewards/: CommonRewards.h  PlayerReward.h  Reward.h  RewardWrapper.h  ZeroSumReward.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/StateSetters/: BallNearCarState.cpp  BallNearCarState.h  CombinedState.h  FrontierState.cpp  FrontierState.h  RandomState.cpp  StateSetter.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/TerminalConditions/: TerminalCondition.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/Util/: CrashDebug.h
GigaLearnCPP/RLGymCPP/thread_pool/: thread_pool.h  thread_safe_queue.h
GigaLearnCPP/python_scripts/: metric_receiver.py
GigaLearnCPP/src/private/GigaLearnCPP/: EvolutionStrategy.cpp  EvolutionStrategy.h  FrameworkTorch.h  PolicyVersionManager.cpp  PolicyVersionManager.h
GigaLearnCPP/src/private/GigaLearnCPP/PPO/: ContrastiveGoalLearner.cpp  ContrastiveGoalLearner.h  ExperienceBuffer.cpp  ExperienceBuffer.h  GAE.cpp  GAE.h  GCRLOptionality.cpp  GCRLOptionality.h  PPOLearner.cpp  PPOLearner.h  Reachability.cpp  Reachability.h  TrainingBatch.cpp  TrainingBatch.h
GigaLearnCPP/src/private/GigaLearnCPP/Util/: EMAHistogram.h  MagSGD.h  Models.cpp  Models.h  Muon.cpp  Muon.h  RSNorm.h  WelfordStat.h
GigaLearnCPP/src/public/GigaLearnCPP/: EvolutionStrategyConfig.h  Learner.cpp  Learner.h  LearnerConfig.h
GigaLearnCPP/src/public/GigaLearnCPP/PPO/: PPOLearnerConfig.h
GigaLearnCPP/src/public/GigaLearnCPP/Util/: InferUnit.cpp  InferUnit.h  KeyPressDetector.cpp  KeyPressDetector.h  MetricSender.cpp  MetricSender.h  MetricSink.h  ModelConfig.h  PythonRuntime.cpp  PythonRuntime.h  RenderSender.cpp  RenderSender.h  RenderSink.h  Report.h  Timer.h
RLBotCPP/inc/rlbot/: flatbuffercontainer.h  interface.h
RLBotCPP/src/: botmanager.cc  server.cc
src/: ExampleMain.cpp  RLBotClient.cpp
tests/: CMakeLists.txt  TestHarness.h  TestMain.cpp  test_experience_buffer.cpp  test_gae.cpp  test_metric_sink.cpp  test_muon.cpp  test_reward_name.cpp  test_rsnorm.cpp  test_td_contrastive.cpp  test_training_batch.cpp  test_welford.cpp
tests/python_scripts/: render_receiver.py
tools/: get_collision_meshes.sh  run_trainer.sh  setup_cuda_libtorch.sh
